# cgDist

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci-and-docker.yml  docker-build.yml  rust-ci.yml
examples/: custom_hasher.rs  hamming-config.toml
src/: inspector.rs  lib.rs  main.rs
src/cli/: args.rs  config.rs  merge.rs  mod.rs  validation.rs
src/core/: alignment.rs  distance.rs  distance_improved.rs  mod.rs
src/core/recombination/: detector.rs  factory.rs  mod.rs  phi_test.rs  rm_ratio.rs  threshold.rs
src/data/: mod.rs  profile.rs  sequence.rs  sequences.rs
src/data/loaders/: csv.rs  mod.rs  tsv.rs
src/hashers/: crc32.rs  hamming.rs  md5.rs  mod.rs  registry.rs  sequence.rs  sha256.rs  traits.rs
src/output/: mod.rs
validation_test/: EXPECTED_RESULTS_CRC32.md  README.md  VALIDATION_SUMMARY.md  run_validation.py  setup_validation_test.py  test_bidirectional_streaming.py  test_new_features.py  validate_cache.py
validation_test/results/: recomb_dna_strict.csv  recomb_low_threshold.csv
validation_test/schema_crc32/: locus1.fasta  locus2.fasta  locus3.fasta
