[package]
name = "cgdist"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast SNP/indel-level distance calculator for core genome MLST analysis"
authors = ["A. De Ruvo <a.deruvo@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/cgdist"
keywords = ["bioinformatics", "genomics", "mlst", "alignment", "distance"]
categories = ["science", "command-line-utilities"]

# ============================================================================
# DEPENDENCIES - ONLY WHAT'S NEEDED FOR cgdist.rs
# ============================================================================

[dependencies]
# Core alignment engine
parasail-rs = "0.7.8"

# Parallel processing
rayon = "1.8"

# CLI parsing
argh = "0.1"
clap = "4.4"

# Progress indicators
indicatif = "0.17"

# FASTA/sequence I/O
bio = "1.6"

# Fast CRC32 computation
crc32fast = "1.4"

# Serialization for caching
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# LZ4 compression for cache
lz4_flex = "0.11"

# MessagePack serialization
rmp-serde = "1.1"

# Timestamps for logging
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for filtering
regex = "1.11"

# CSV file I/O for recombination logs
csv = "1.3"

# TOML configuration file support
toml = "0.8"

# Additional hashers for plugin system
sha2 = "0.10"
md5 = "0.7"

# ============================================================================
# PERFORMANCE OPTIMIZATION
# ============================================================================

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Smaller binary size
strip = true            # Strip debug symbols

[profile.release.build-override]
opt-level = 3

# ============================================================================
# BINARY CONFIGURATION
# ============================================================================

[[bin]]
name = "cgdist"
path = "src/main.rs"

[[bin]]
name = "inspector"
path = "src/inspector.rs"

[[bin]]
name = "recombination_analyzer"
path = "src/bin/recombination_analyzer.rs"


# ============================================================================
# FEATURES (OPTIONAL)
# ============================================================================

[features]
default = []
# Enable additional statistics and debugging
debug-stats = []
# Enable memory profiling
memory-profiling = []